Add the ability to pack self-contained licenses and license expressions

--- a/src/NuGet.Core/NuGet.Build.Tasks.Pack/NuGet.Build.Tasks.Pack.targets
+++ b/src/NuGet.Core/NuGet.Build.Tasks.Pack/NuGet.Build.Tasks.Pack.targets
@@ -249,7 +249,11 @@ Copyright (c) .NET Foundation. All rights reserved.
               TreatWarningsAsErrors="$(TreatWarningsAsErrors)"
               OutputFileNamesWithoutVersion="$(OutputFileNamesWithoutVersion)"
               InstallPackageToOutputPath="$(InstallPackageToOutputPath)"
-              SymbolPackageFormat="$(SymbolPackageFormat)"/>
+              SymbolPackageFormat="$(SymbolPackageFormat)"
+              PackageLicenseFile="$(PackageLicenseFile)"
+              PackageLicenseExpression="$(PackageLicenseExpression)"
+              PackageLicenseExpressionVersion="$(PackageLicenseExpressionVersion)"
+              />
   </Target>
 
   <!--
